--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 <br>
 <br><br>
 <br>
-<div class ="block3">
+<div class="container">
+  <div class ="block3">
 <a href="https://docs.google.com/document/d/19MaCjPmy6GhaB0j4yGREatrey5zcQq92WviRyMLbieg/edit" target = "_blank" ><img  src="img/acts.png" width="190" heaight="200" ><h2>Акції</h2></a>
 
 
@@ -81,19 +82,9 @@
 <a href="https://docs.google.com/spreadsheets/d/1yYHQIGEfv5_FXYo09-va_Ygr2jJtG1Mvc4-GJsNl5Vw/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="195" heaight="220" ><h2>Скрипт Підключення</h2></a>
+<a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="185" heaight="210" ><h2>Скрипт Підключення</h2></a>
 
 </div>
-<br><br>
-<br>
-<br>
-<br>
-<br><br><br>
-<br>
-<br><br><br>
-<br>
-<br><br>
-<hr>
 
 <div class ="block3">
 
@@ -108,17 +99,10 @@
 
 </div>
 
+</div>
 <br>
 <br>
-<br>
-<br><br>
-<br>
-<br>
-<br>
-<br>
-<br><br>
-<br>
-<br><br><br>
+
 
 
 
@@ -134,17 +118,17 @@
   <tr>
   <td>м. Тернопіль, вул. Листопадова, 1</td>
   <td>з пн-пт 9-19</td>
-  <td>сб-нд вих</td>
+  <td>сб-нд 9-16</td>
   </tr>
   <tr>
   <td>м. Червоноград, вул. Стуса, 53</td>
   <td>з пн-пт 9-18</td>
-  <td>сб-нд вих</td>
+  <td>сб 10-15</td>
   </tr>
   <tr>
   <td>м. Володимир, вул. Роксолани, 6</td>
-  <td>з пн-пт 9-18</td>
-  <td>сб-нд вих</td>
+  <td>з пн-пт 8-17</td>
+  <td>сб 10-15</td>
   </tr>
   </table>
   
