--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <a href="https://docs.google.com/spreadsheets/d/1yYHQIGEfv5_FXYo09-va_Ygr2jJtG1Mvc4-GJsNl5Vw/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="185" heaight="210" ><h2>Скрипт Підключення</h2></a>
+<a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
 
 </div>
 
