--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" width="150" heaight="200" ><h2>Ютуб</h2></a>
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1n3b7yrJhpL3k6lu-iIrrXXtC7rGRS-HCEMDyYdcNnIY/edit#gid=1910128994" target = "_blank" ><img  src="" alt ="Поки фото немає" width="150" heaight="200" ><h2>Графік</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1n3b7yrJhpL3k6lu-iIrrXXtC7rGRS-HCEMDyYdcNnIY/edit#gid=1910128994" target = "_blank" ><img  src="img/1.png" alt ="Поки фото немає" width="150" heaight="200" ><h2>Графік</h2></a>
 
 </div>
 <div class ="block3">
