--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
  <td><a href="https://billing.columbus.te.ua/clients2.php" target = "_blank" ><img  src="img/start.png" width="180" heaight="180" ></td>
  
  <td width ="100%"></td>
-<td> <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" width="150" heaight="200" ><h2>Ютуб</h2></a></td>
+<td> <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" width="50" heaight="20" ></a></td>
  <td>
   <div class="dropdown" style="float:left;">
   <button class="dropbtn">Скрипти</button>
