--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a class="active" href="https://www.google.co.uk/"  target = "_blank">Google</a>
             <a href="https://mail.columbus.in.ua/#/mailbox/INBOXt" target = "_blank">Mail</a>
             <a href="https://columbus.te.ua/" target = "_blank">Columbus</a>
-            <a href="#about">About</a>
+            <a href="pause.html">Перерва</a>
         </div>
     </div>
 </div>
