--- a/pause.html
+++ b/pause.html
@@ -94,7 +94,19 @@ height: 40px;
 background: #fff; 
 border-radius: 50%; 
 }
-
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+ .button2 {background-color: #008CBA;} /* Blue */
 
 
 
@@ -110,7 +122,7 @@ border-radius: 50%;
 <div class="ball"></div>
 </div>
 </div>
-
+<button class="button button5">Назад</button>
 
 </body>
 
