--- a/pause.html
+++ b/pause.html
@@ -122,7 +122,7 @@ border-radius: 50%;
 <div class="ball"></div>
 </div>
 </div>
-<button class="button button5">Назад</button>
+<button class="button button5" href= "index.html" >Назад</button>
 
 </body>
 
