--- a/pause.html
+++ b/pause.html
@@ -125,7 +125,7 @@ border-radius: 50%;
  <br>
  <br>
  <br>
-<button class="button button5" href= "index.html" >Назад</button>
+<button class="button button5" ><a href= "index.html"></a> Назад</button>
 
 </body>
 
