--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/1yYHQIGEfv5_FXYo09-va_Ygr2jJtG1Mvc4-GJsNl5Vw/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1-NxAQh1C1U9SIOTCAhypH9pHJh6k05UVBiwv_3gEQc4/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
@@ -92,7 +92,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1n3b7yrJhpL3k6lu-iIrrXXtC7rGRS-HCEMDyYdcNnIY/edit#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/11IRXzVilcCJs5PMLkTXptV_XqN5nOx00USS5hFQhh-4/edit?pli=1#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік</h2></a>
 
 </div>
 <div class ="block3">
