--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </div>
 <div class ="block3">
 
-
+<a href="https://docs.google.com/spreadsheets/d/1v9ry_3z0BjICG4-IWhLp64pmUg4Uvaj9/edit#gid=2071443846" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>КаналиЧГ/ВВ</h2></a>
 </div>
 
 </div>
