--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <button class="dropbtn">Скрипти</button>
   <div class="dropdown-content" style="left:0;">
 
-    <a href="https://docs.google.com/document/d/1zHn8MAkiO-NtJD_Fqjres65OfzaAkfYfscBeKUWMEXk/edi" target = "_blank">Скрипти ЮО</a>
+    <a href="https://docs.google.com/spreadsheets/d/1xkYJFJtwyaHTPIMl-7DPR8FscvbP5M4kU_7VE-dwBHI/edit#gid=573171966" target = "_blank">Старти</a>
     <a href="https://docs.google.com/document/d/1sXtKsC8vM91aa7xWJwNEA2XWsZmRFLrD/edit" target = "_blank">Скрипт ФО</a>
     <a href ="https://docs.google.com/document/d/1HnXWpj_1yEefc-jKml3PWS5MJa3_CoZk/edit" target = "_blank">Прейскурант</a>
   </div>
