--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <td> <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" width="50" heaight="20" ></a></td>
  <td>
   <div class="dropdown" style="float:left;">
-  <button class="dropbtn">Скрипти</button>
+  <button class="dropbtn">Додаткове</button>
   <div class="dropdown-content" style="left:0;">
 
     <a href="https://docs.google.com/spreadsheets/d/1xkYJFJtwyaHTPIMl-7DPR8FscvbP5M4kU_7VE-dwBHI/edit#gid=573171966" target = "_blank">Старти</a>
