--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
 <div>
+	<div class="earth-animation"></div>
     <div class="topnav">
         <div class="phone-number">тел.0 800 607 407 info@columbus.in.ua</div> <!-- Номер телефону зліва -->
         <div>
