--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/11IRXzVilcCJs5PMLkTXptV_XqN5nOx00USS5hFQhh-4/edit?pli=1#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/118-MEa5M-bHetuyehd_N1FcjTKdVKwl5xmnPfh9EB1M/edit#gid=1242355210" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік</h2></a>
 
 </div>
 <div class ="block3">
