--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1lwHsFJIlRpe90wlBMwsf89qgpyDTnPbxWD0194l0ZLg/edit?pli=1#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1lwHsFJIlRpe90wlBMwsf89qgpyDTnPbxWD0194l0ZLg/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік</h2></a>
 
 </div>
 <div class ="block3">
