--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <a><h3>Посилання на обращенія</h3> </a>
 <br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=12920444#clsuqa" target = "_blank">Підключення нового абонента TO</a><br>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD%D1%86&clsuqa_id=12920522&clsuqa_brief=0#clsuqa" target = "_blank">Підключення нового абонента TЕ</a><br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%B1%D1%96%D1%82%D1%82%D0%B5%D1%80&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_id=12029922#clsuqa" target = "_blank">Консультація</a><br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%B1%D1%96%D1%82%D1%82&clsuqa_question_name_filter=%D0%B7%D0%B0%D0%BF%D0%B8%D1%82&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=12746836#clsuqa" target = "_blank">Запитання невизначеної тематики</a>
 </div>
