--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/19EPos0Phdtw_BT0jisy313UNc8utjgL66vUsTtpmYxM/edit#gid=138711317" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1eJSjde2z1LiS7VNJ7YAMc9hTB1TeO3cMJHudbm0xALI/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
@@ -96,7 +96,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1WcmxVaTB9Ri_yEVKvyyFfAFaFe9-ZiziZGB31peMdxI/edit#gid=267902988" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Листопад</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/146jK6W4QzfG8WO6lbx70lTyHKX6QvQGW-n4O3bdyBP4/edit#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Грудень</h2></a>
 
 </div>
 <div class ="block3">
