--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/1VPhrMLj4Zzv7H1k2BpM4pJBgLWyibU-1HmAV7-0lPgs/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/17QgfeHA72kDwDHp-o8HROywdVOCTjozpehc8siGw4vc/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
@@ -96,7 +96,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1voKBnWsBkr-MVitpBXvGSPL4i5xpv0nCnTl9ZsoQe24/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Січень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1aGX0eYsysAU-lxi7NJzMQkuppweInuouCp8mZFF2JuE/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Лютий</h2></a>
 
 </div>
 <div class ="block3">
