--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
 
 </div>
 
+	<div class ="block3">
+<a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
+
+</div>
+	
+
 <div class ="block3">
 
 
