--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
 <br><br>
 <br>
 <div class="container">
-  <div class ="block3">
-<a href="https://docs.google.com/document/d/19MaCjPmy6GhaB0j4yGREatrey5zcQq92WviRyMLbieg/edit" target = "_blank" ><img  src="img/acts.png" width="190" heaight="200" ><h2>Акції</h2></a>
-	  
-
+  
+	<div class ="block3">
+<a href="https://docs.google.com/document/d/19MaCjPmy6GhaB0j4yGREatrey5zcQq92WviRyMLbieg/edit target = "_blank" ><img  src="img/acts.png" width="190" heaight="200"><h2>Скрипт</h2></a>
 
 </div>
 
