--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
 </div>
 <div id="dagurdsa-nevailable"> <i class="fa fa-share"></i>
   <div id="gechusudesab-sequiremen">
-
+<div>
 <a><h3>Посилання на звернення</h3> </a>
 <br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD&clsuqa_subquestion_name_filter=%D0%BF%D1%96%D0%B4%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%BD%D1%8F#clsuqa" target = "_blank">Підключення нового абонента TO</a><br><br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD%D1%86&clsuqa_subquestion_name_filter=%D0%BF%D1%96%D0%B4%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%BD&clsuqa_id=12920522&clsuqa_brief=0#clsuqa" target = "_blank">Підключення нового абонента TЕ</a><br><br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%09+%D0%9F%D0%BE%D1%82%D0%B5%D0%BD%D1%86%D1%96%D0%B9%D0%BD%D0%B8%D0%B9+%D0%90%D0%B1%D0%BE%D0%BD%D0%B5%D0%BD%D1%82+%D0%92%D0%92&clsuqa_subquestion_name_filter=%D0%9F%D0%86%D0%94%D0%9A%D0%9B&clsuqa_id=12920522&clsuqa_brief=0#clsuqa" target = "_blank">Підключення нового абонента ВВ</a><br><br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%9F%D0%BE%D1%82%D0%B5%D0%BD%D1%86%D1%96%D0%B9%D0%BD%D0%B8%D0%B9%20%D0%90%D0%B1%D0%BE%D0%BD%D0%B5%D0%BD%D1%82%20%D0%A7%D0%93%20%28230925555%29&clsuqa_brief=0&clsuqa_id=12919946#clsuqa" target = "_blank">Підключення нового абонента ЧГ</a><br><br>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82&clsuqa_subquestion_name_filter=%D0%BA%D0%BE%D0%BD%D1%81&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=13012142#clsuqa" target = "_blank">Консультація</a><br><br>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82&clsuqa_subquestion_name_filter=%D1%83%D1%82%D0%BE%D1%87%D0%BD%D0%B5%D0%BD%D0%BD%D1%8F&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=13225972#clsuqa" target="_blank">Уточнення інформації по заявці <a/><br><br>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%B1%D1%96%D1%82%D1%82%D0%B5%D1%80&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_id=12029922#clsuqa" target = "_blank">Консультація</a><br>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%B1%D1%96%D1%82%D1%82&clsuqa_question_name_filter=%D0%B7%D0%B0%D0%BF%D0%B8%D1%82&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=12746836#clsuqa" target = "_blank">Запитання невизначеної тематики</a>
 </div>
   </div>
-</div>
+  </div>
 <br><br><br><br>  
   <div class="widt">
 
-<table>
+<table >
 
 <tr>
  <td><a href="https://billing.columbus.te.ua/clients2.php" target = "_blank" ><img  src="img/start.png" width="180" heaight="180" ></td>
@@ -77,29 +77,26 @@
 <br><br>
 <br>
 <div class="container">
-  
-	<div class ="block3">
-<a href="https://docs.google.com/document/d/19MaCjPmy6GhaB0j4yGREatrey5zcQq92WviRyMLbieg/edit target = "_blank" ><img  src="img/acts.png" width="190" heaight="200"><h2>Скрипт</h2></a>
+  <div class ="block3">
+<a href="https://docs.google.com/document/d/19MaCjPmy6GhaB0j4yGREatrey5zcQq92WviRyMLbieg/edit" target = "_blank" ><img  src="img/acts.png" width="190" heaight="200" ><h2>Акції</h2></a>
+
 
 </div>
-
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1OZNPg0HGYn3s-TS6ehxvmnFs_w_Y3nyRv5-QXD_5W7A/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png width="270" heaight="220"  ><h2>Перевірка заявок</h2></a>
 
+<a href="https://docs.google.com/spreadsheets/d/12T-hXPTPQrNikrYLvUtkVRtPowQiOCdhnI_VL6fOf6w/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
-
-	<div class ="block3">
+<div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
 
 </div>
-	
 
 <div class ="block3">
 
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1aGX0eYsysAU-lxi7NJzMQkuppweInuouCp8mZFF2JuE/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Лютий</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1lwHsFJIlRpe90wlBMwsf89qgpyDTnPbxWD0194l0ZLg/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік</h2></a>
 
 </div>
 <div class ="block3">
