--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD%D1%86&clsuqa_subquestion_name_filter=%D0%BF%D1%96%D0%B4%D0%BA%D0%BB%D1%8E%D1%87%D0%B5%D0%BD%D0%BD&clsuqa_id=12920522&clsuqa_brief=0#clsuqa" target = "_blank">Підключення нового абонента TЕ</a><br><br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%09+%D0%9F%D0%BE%D1%82%D0%B5%D0%BD%D1%86%D1%96%D0%B9%D0%BD%D0%B8%D0%B9+%D0%90%D0%B1%D0%BE%D0%BD%D0%B5%D0%BD%D1%82+%D0%92%D0%92&clsuqa_subquestion_name_filter=%D0%9F%D0%86%D0%94%D0%9A%D0%9B&clsuqa_id=12920522&clsuqa_brief=0#clsuqa" target = "_blank">Підключення нового абонента ВВ</a><br><br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%9F%D0%BE%D1%82%D0%B5%D0%BD%D1%86%D1%96%D0%B9%D0%BD%D0%B8%D0%B9%20%D0%90%D0%B1%D0%BE%D0%BD%D0%B5%D0%BD%D1%82%20%D0%A7%D0%93%20%28230925555%29&clsuqa_brief=0&clsuqa_id=12919946#clsuqa" target = "_blank">Підключення нового абонента ЧГ</a><br><br>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%B1%D1%96%D1%82%D1%82%D0%B5%D1%80&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_id=12029922#clsuqa" target = "_blank">Консультація</a><br>
-<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%B1%D1%96%D1%82%D1%82&clsuqa_question_name_filter=%D0%B7%D0%B0%D0%BF%D0%B8%D1%82&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=12746836#clsuqa" target = "_blank">Запитання невизначеної тематики</a>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82&clsuqa_subquestion_name_filter=%D0%BA%D0%BE%D0%BD%D1%81&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=13012142#clsuqa" target = "_blank">Консультація</a><br>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82&clsuqa_subquestion_name_filter=%D0%B7%D0%B0%D0%BB%D0%B8%D1%88&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=12990586#clsuqa" target = "_blank">Запитання невизначеної тематики</a>
 </div>
   </div>
   </div>
@@ -84,7 +84,7 @@
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/12T-hXPTPQrNikrYLvUtkVRtPowQiOCdhnI_VL6fOf6w/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/17QgfeHA72kDwDHp-o8HROywdVOCTjozpehc8siGw4vc/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
@@ -96,7 +96,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1lwHsFJIlRpe90wlBMwsf89qgpyDTnPbxWD0194l0ZLg/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1aGX0eYsysAU-lxi7NJzMQkuppweInuouCp8mZFF2JuE/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Лютий</h2></a>
 
 </div>
 <div class ="block3">
