--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%9F%D0%BE%D1%82%D0%B5%D0%BD%D1%86%D1%96%D0%B9%D0%BD%D0%B8%D0%B9%20%D0%90%D0%B1%D0%BE%D0%BD%D0%B5%D0%BD%D1%82%20%D0%A7%D0%93%20%28230925555%29&clsuqa_brief=0&clsuqa_id=12919946#clsuqa" target = "_blank">Підключення нового абонента ЧГ</a><br><br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82&clsuqa_subquestion_name_filter=%D0%BA%D0%BE%D0%BD%D1%81&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=13012142#clsuqa" target = "_blank">Консультація</a><br>
 <a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82&clsuqa_subquestion_name_filter=%D0%B7%D0%B0%D0%BB%D0%B8%D1%88&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=12990586#clsuqa" target = "_blank">Запитання невизначеної тематики</a>
+<a href="https://billing.columbus.te.ua/clients_support_qa.php?clsuqa_client_name_filter=%D0%BF%D0%BE%D1%82%D0%B5%D0%BD%D1%86&clsuqa_subquestion_name_filter=%D1%83%D1%82%D0%BE%D1%87%D0%BD%D0%B5%D0%BD%D0%BD%D1%8F&clsuqa_created_name_filter=%D1%81%D0%B8%D1%87&clsuqa_brief=0&clsuqa_id=13225972#clsuqa" target = "_blank">Уточнення Інформації по заявці</a>
 </div>
   </div>
   </div>
