--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </div>
 
 <div class ="block3">
-<a href="https://drive.google.com/drive/u/1/folders/19MOrpQjBxI3eP1-2Wf-7S8g1RFd7U-0whttps://docs.google.com/spreadsheets/d/1OZNPg0HGYn3s-TS6ehxvmnFs_w_Y3nyRv5-QXD_5W7A/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Скарбничка розуму</h2></a>
+<a href="https://drive.google.com/drive/u/1/folders/19MOrpQjBxI3eP1-2Wf-7S8g1RFd7U-0whttps://docs.google.com/spreadsheets/d/1OZNPg0HGYn3s-TS6ehxvmnFs_w_Y3nyRv5-QXD_5W7A/edit#gid=1486853304" target = "_blank" ><img  src="img/sher.jpg" width="270" heaight="220" ><h2>Скарбничка розуму</h2></a>
 
 </div>
 <div class ="block3">
