--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/1OZNPg0HGYn3s-TS6ehxvmnFs_w_Y3nyRv5-QXD_5W7A/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1HJ0-hVJ52VdQ7dZt1--ZEpDHeKNEAq2N2Tylar-P1Fk/edit#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
@@ -97,7 +97,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1aGX0eYsysAU-lxi7NJzMQkuppweInuouCp8mZFF2JuE/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Лютий</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1UWbBRsWY_huLXgyjHW5iFe9gKy2XCcOQKXsli1xG6Qw/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Березень</h2></a>
 
 </div>
 <div class ="block3">
