--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1KVJzmOPTMO3H3Ca6rurWUa6ZB7qJ0oPpP6jReEOfONQ/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Березень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1KVJzmOPTMO3H3Ca6rurWUa6ZB7qJ0oPpP6jReEOfONQ/edit#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Квітень</h2></a>
 
 </div>
 <div class ="block3">
