--- a/index.html
+++ b/index.html
@@ -12,6 +12,41 @@
 	<div class="earth-animation"></div>
     <div class="topnav">
         <div class="phone-number">тел.0 800 607 407 info@columbus.in.ua</div> <!-- Номер телефону зліва -->
+	    <div>  <div class="hit-area">
+  <div class="hitbox" id="a-1"></div>
+  <div class="hitbox" id="a-2"></div>
+  <div class="hitbox" id="a-3"></div>
+  <div class="hitbox" id="a-4"></div>
+  <div class="hitbox" id="a-5"></div>
+  <div class="hitbox" id="b-1"></div>
+  <div class="hitbox" id="b-2"></div>
+  <div class="hitbox" id="b-3"></div>
+  <div class="hitbox" id="b-4"></div>
+  <div class="hitbox" id="b-5"></div>
+  <div class="hitbox" id="c-1"></div>
+  <div class="hitbox" id="c-2"></div>
+  <div class="hitbox" id="c-3"></div>
+  <div class="hitbox" id="c-4"></div>
+  <div class="hitbox" id="c-5"></div>
+  <div class="hitbox" id="d-1"></div>
+  <div class="hitbox" id="d-2"></div>
+  <div class="hitbox" id="d-3"></div>
+  <div class="hitbox" id="d-4"></div>
+  <div class="hitbox" id="d-5"></div>
+  <div class="hitbox" id="e-1"></div>
+  <div class="hitbox" id="e-2"></div>
+  <div class="hitbox" id="e-3"></div>
+  <div class="hitbox" id="e-4"></div>
+  <div class="hitbox" id="e-5"></div>
+  <div class="eye">
+    <div class="pupil"></div>
+  </div>
+  <div class="eye">
+    <div class="pupil"></div>
+  </div>
+  <div class="eyelid"></div>
+  <div class="eyelid"></div>
+</div></div>
         <div>
             <a class="active" href="https://www.google.co.uk/"  target = "_blank">Google</a>
             <a href="https://mail.columbus.in.ua/#/mailbox/INBOXt" target = "_blank">Mail</a>
