--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>MY-COLUMBUS</title>
 	<link rel="stylesheet" href="style.css"><img srs ="">
+	<link rel="stylesheet" href="st.css"><img srs ="">
 	
 	
 </head>
