--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
 <div>
+	<div>
 	<div class="earth-animation"></div>
     <div class="topnav">
         <div class="phone-number">тел.0 800 607 407 info@columbus.in.ua</div> <!-- Номер телефону зліва -->
-	    </div>
         <div>
             <a class="active" href="https://www.google.co.uk/"  target = "_blank">Google</a>
             <a href="https://mail.columbus.in.ua/#/mailbox/INBOXt" target = "_blank">Mail</a>
