--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="earth-animation"></div>
     <div class="topnav">
         <div class="phone-number">тел.0 800 607 407 info@columbus.in.ua</div>
-<div class="phone-number">Я завжди даю 100% на роботі: 10% понеділок, 23% вівторок, 40% середа, 22% четвер і 5% п'ятниця.</div> <!-- Номер телефону зліва -->
+<div class="phone-number"><b>Я завжди даю 100% на роботі: 10% понеділок, 23% вівторок, 40% середа, 22% четвер і 5% п'ятниця.</b>b</div> <!-- Номер телефону зліва -->
         <div>
             <a class="active" href="https://www.google.co.uk/"  target = "_blank">Google</a>
             <a href="https://mail.columbus.in.ua/#/mailbox/INBOXt" target = "_blank">Mail</a>
