--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/1ECK2CMmjfNk7Gkt8_dNv1tzE0vwzXR4zCEJUh_SiJrI/edit#gid=138711317" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1PDbxaWhZqetHk-nXiYyoLupdxMds0BKMtG8m2PfHgbw/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
@@ -100,7 +100,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1DVbtMqTnioPLubQzF0dVFmj-f-nUbw5QvbkqkiY_x-U/edit#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Червень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/114HloRgS3l2k4QHxafDYhuhREz9GjJmK5yyq0OQmhAg/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Липень</h2></a>
 
 </div>
 <div class ="block3">
