--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1bjGWakf42gCND7tEoODinJnltrz49g55ERTxORLwL3E/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Липень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1bjGWakf42gCND7tEoODinJnltrz49g55ERTxORLwL3E/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Серпень</h2></a>
 
 </div>
 <div class ="block3">
