--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1yxc4Kc9-oE1NlHToHfrwlSZquCIrGgKiWfa14KnTtas/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Вересень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1cpWjTny4Cslk_ZJJaiHOPN6mYGH2HT0g5VhPiKNoUCk/edit?gid=267902988#gid=267902988" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Жовтень</h2></a>
 
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/1v9ry_3z0BjICG4-IWhLp64pmUg4Uvaj9/edit#gid=2071443846" target = "_blank" ><img  src="img/2.png" width="200" heaight="250" ><h2>Тарифи ЧГ/ВВ</h2></a>
+<a href="http://185.53.79.88/stats/index.php" target = "_blank" ><img  src="img/2.png" width="200" heaight="250" ><h2>Астернік</h2></a>
 </div>
 
 </div>
