--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="phone-number"><b>Я завжди даю 100% на роботі: 10% понеділок, 23% вівторок, 40% середа, 22% четвер і 5% п'ятниця.</b></div> <!-- Номер телефону зліва -->
         <div>
             <a class="active" href="https://www.google.co.uk/"  target = "_blank">Google</a>
-            <a href="https://mail.columbus.in.ua/#/mailbox/INBOXt" target = "_blank">Mail</a>
+            <a href="https://mail.google.com/chat/u/0/#chat/home" target = "_blank">Chat</a>
             <a href="https://columbus.te.ua/" target = "_blank">Columbus</a>
             <a href="pause.html">Перерва</a>
         </div>
