--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   <button class="dropbtn">Додаткове</button>
   <div class="dropdown-content" style="left:0;">
 
-    <a href="https://docs.google.com/spreadsheets/d/1xkYJFJtwyaHTPIMl-7DPR8FscvbP5M4kU_7VE-dwBHI/edit#gid=573171966" target = "_blank">Старти</a>
-    <a href="https://docs.google.com/document/d/1sXtKsC8vM91aa7xWJwNEA2XWsZmRFLrD/edit" target = "_blank">Скрипт ФО</a>
+    <a href="https://docs.google.com/spreadsheets/d/1_1pS17S4Xhdikkq27YFAKkdtMYnaSdZvIDWDrh_Aflc/edit?gid=1998522442#gid=1998522442" target = "_blank">Втрачені</a>
+    <a href="https://docs.google.com/spreadsheets/d/1X96e_XqEMG-QAPRHh8EAJ0gru6bJ7jIef8N-vC7JpAs/edit?gid=182078680#gid=182078680" target = "_blank">Заявки із сайту</a>
     <a href ="https://docs.google.com/document/d/1HnXWpj_1yEefc-jKml3PWS5MJa3_CoZk/edit" target = "_blank">Прейскурант</a>
   </div>
 </div> 
