--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </div>
 <div class ="block3">
 
-<a href="http://185.53.79.88/stats/index.php" target = "_blank" ><img  src="img/2.png" width="200" heaight="250" ><h2>Астернік</h2></a>
+<a href="http://185.53.79.88/stats/index.php" target = "_blank" ><img  src="img/gta.webp" width="200" heaight="250" ><h2>Астернік</h2></a>
 </div>
 
 </div>
