--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <td> <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" width="50" heaight="20" ></a></td>
  <td>
   <div class="dropdown" style="float:left;">
-  <button class="dropbtn">Додаткове</button>
+  <button class="dropbtn">СО</button>
   <div class="dropdown-content" style="left:0;">
 
     <a href="https://docs.google.com/spreadsheets/d/1_1pS17S4Xhdikkq27YFAKkdtMYnaSdZvIDWDrh_Aflc/edit?gid=1998522442#gid=1998522442" target = "_blank">Втрачені</a>
