--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
   <div class="dropdown" style="float:left;">
   <button class="dropbtn">СО</button>
   <div class="dropdown-content" style="left:0;">
-    <a href="https://docs.google.com/spreadsheets/d/1_1pS17S4Xhdikkq27YFAKkdtMYnaSdZvIDWDrh_Aflc/edit?gid=1998522442#gid=1998522442" target = "_blank">KPI CB/CO</a>
-    <a href="https://docs.google.com/spreadsheets/d/1R54pY8NVzEZ633JCaROp0W3x1WWkdWs5n-G1fGbII8c/edit?gid=1632434140#gid=1632434140" target = "_blank">Втрачені</a>
+    <a href="https://docs.google.com/spreadsheets/d/1BJfw0N-J28qkoaflu8A7hchj-kOQ1FCCnVkLAibzTLY/edit?gid=298639417#gid=298639417" target = "_blank">KPI CB/CO</a>
+    <a href="https://docs.google.com/spreadsheets/d/1_1pS17S4Xhdikkq27YFAKkdtMYnaSdZvIDWDrh_Aflc/edit?gid=1998522442#gid=1998522442" target = "_blank">Втрачені</a>
     <a href="https://docs.google.com/spreadsheets/d/1X96e_XqEMG-QAPRHh8EAJ0gru6bJ7jIef8N-vC7JpAs/edit?gid=182078680#gid=182078680" target = "_blank">Заявки із сайту</a>
-    <a href="https://docs.google.com/spreadsheets/d/1X96e_XqEMG-QAPRHh8EAJ0gru6bJ7jIef8N-vC7JpAs/edit?gid=182078680#gid=182078680" target = "_blank"><font color: "red">ERRORS</font></a>
+    <a href="https://docs.google.com/spreadsheets/d/1R54pY8NVzEZ633JCaROp0W3x1WWkdWs5n-G1fGbII8c/edit?gid=1632434140#gid=1632434140" target = "_blank">ERRORS</a>
     <a href ="https://docs.google.com/document/d/1HnXWpj_1yEefc-jKml3PWS5MJa3_CoZk/edit" target = "_blank">Прейскурант</a>
   </div>
 </div> 
