--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
  
  <td width ="100%"></td>
 <td> <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" width="50" heaight="20" ></a></td>
-<td><a href="https://drive.google.com/drive/home" target = "_blank" >< <div class="image-wrapper">img  src="img/drive.png" width="50" heaight="20" ></div></a></td>
+<td><a href="https://drive.google.com/drive/home" target = "_blank" >< <div class="image-wrapper"><img  src="img/drive.png" width="50" heaight="20" ></div></a></td>
  <td>
   <div class="dropdown" style="float:left;">
   <button class="dropbtn">СО</button>
