--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
 	<title>MY-COLUMBUS</title>
 	<link rel="stylesheet" href="style.css"><img srs ="">
+	<style>
+.rotate {
+  animation: spin 5s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+		</style>
 	
 	
 	
@@ -48,7 +58,7 @@
  
  <td width ="100%"></td>
 <td> <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" width="50" heaight="20" ></a></td>
-<td> <a href="https://drive.google.com/drive/home" target = "_blank" ><img  src="img/drive.png" width="50" heaight="20" ></a></td>
+<td> <a href="https://drive.google.com/drive/home" target = "_blank" ><img class="rotate"  src="img/drive.png" width="50" heaight="20" ></a></td>
  <td>
   <div class="dropdown" style="float:left;">
   <button class="dropbtn">СО</button>
