--- a/pause.html
+++ b/pause.html
@@ -1,134 +1,66 @@
-<!DOCKTYPE>
-<html>
-
+<!DOCTYPE html>
+<html lang="uk">
 <head>
-<title>new tabel</title>
-<meta charset="utf-8">
-<target="_blank">
-<style>
-
-
-
-* {
-margin: 0 ; 
-padding: 0; 
-box-sizing: border-box; 
-
-}
-
-body {
-
-display: flex; 
-justify-content: center; 
-align-items: center; 
-min-height: 100vh;
-background: #0d1435;
-
-}
-
- .container{
-position: relative ; 
- -webkit-box-reflect: below 1px linear-gradient (transparent, #0001); 
-}
-
-.container .loader {
-position: relative; 
-width:200px; 
-height: 200px; 
-border-radius: 50%; 
-border: 20px solid transparent; 
-border-bottom: 20px solid #9ef006; 
-border-right: 20px solid   #9ef006; 
-transform: rotate(45deg);
-animation: animate 4s ease-in-out infinite; 
- 
-}
-
-@keyframes animate {
-0% {
-transform: rotate(0deg); 
-}
-50% {
-transform: rotate(90deg); 
-}
-100% {
-transform: rotate(0deg);
-}
-
-}
-.container .loader .ball {
-position: absolute;
-top: 0;  
-left:0; 
-width: 100%; 
-height: 100%; 
-border-radius: 50%; 
-
-animation: animateBall 4s ease-in-out infinite; 
- 
-}
-
-@keyframes animateBall {
-
-0% {
-transform: rotate(0deg); 
-}
-50% {
-transform: rotate(180deg); 
-}
-100% {
-transform: rotate(0deg): 
-}
-
-
-}
-
-.container .loader .ball::before  {
-content: ""; 
-position: absolute;
-bottom: 50%; 
-transform: translateY(-50%);
-right: 15px; 
-width: 40px; 
-height: 40px; 
-background: #fff; 
-border-radius: 50%; 
-}
-.button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
- .button2 {background-color: #008CBA;} /* Blue */
-
-
-
-
-</style>
-
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Хрестики-Нолики</title>
+    <style>
+        body {
+            background-color: #001f3f;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .board {
+            display: grid;
+            grid-template-columns: repeat(3, 100px);
+            gap: 5px;
+        }
+        .cell {
+            width: 100px;
+            height: 100px;
+            background-color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2em;
+            cursor: pointer;
+        }
+        .cell.x { color: green; }
+        .cell.o { color: red; }
+    </style>
 </head>
 <body>
-<div class= "container">
-<div class="loader">
-<div class="ball"></div>
-</div>
-</div>
- <br>
- <br>
- <br>
-<button class="button button5" ><a href= "index.html"> Назад</a></button>
+    <div class="board" id="board"></div>
+    <script>
+        const board = document.getElementById('board');
+        let turn = 'x'; // Початковий хід
+        const cells = Array(9).fill(null);
+        
+        board.addEventListener('click', (e) => {
+            const index = Array.from(board.children).indexOf(e.target);
+            if (!cells[index] && index >= 0) {
+                cells[index] = turn;
+                e.target.classList.add(turn);
+                e.target.textContent = turn === 'x' ? 'X' : 'O';
+                turn = turn === 'x' ? 'o' : 'x';
+                // Перевірка на перемогу тут
+            }
+        });
 
+        function renderBoard() {
+            board.innerHTML = '';
+            cells.forEach((cell, index) => {
+                const div = document.createElement('div');
+                div.className = 'cell';
+                div.textContent = cell === 'x' ? 'X' : cell === 'o' ? 'O' : '';
+                board.appendChild(div);
+            });
+        }
+
+        renderBoard();
+    </script>
 </body>
-
-
-
 </html>
