--- a/pause.html
+++ b/pause.html
@@ -8,6 +8,7 @@
         body {
             background-color: #001f3f;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -30,6 +31,11 @@
         }
         .cell.x { color: green; }
         .cell.o { color: red; }
+        #message {
+            margin-top: 20px;
+            font-size: 2em;
+            color: green;
+        }
     </style>
 </head>
 <body>
