--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 <table >
 
 <tr>
- <td><a href="https://billing.columbus.te.ua/clients2.php" target = "_blank" ><img  src="img/start.png" width="180" heaight="180" ></td>
+ <td><a href="https://billing.columbus.te.ua/clients2.php" target = "_blank" ><img  src="img/start.png"  alt="Білінг" width="180" heaight="180" ></td>
  <td width ="100%"></td>
-<td> <a href="https://app.powerbi.com/home?experience=power-bi" target = "_blank" ><img  class="icon" src="img/sk.png" width="50" heaight="20" ></a></td>	
-<td> <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" width="50" heaight="20" ></a></td>
-<td> <a href="https://drive.google.com/drive/home" target = "_blank" ><img class="rotate"  src="img/drive.png" width="50" heaight="20" ></a></td>
+<td> <a href="https://app.powerbi.com/home?experience=power-bi" target = "_blank" ><img  class="icon" src="img/sk.png" alt="Повер бі" width="50" heaight="20" ></a></td>	
+<td> <a href="https://www.youtube.com/" target = "_blank" ><img  src="img/4.png" alt="утубчик" width="50" heaight="20" ></a></td>
+<td> <a href="https://drive.google.com/drive/home" target = "_blank" ><img class="rotate"  src="img/drive.png" alt="Г.ДИСК" width="50" heaight="20" ></a></td>
  <td>
   <div class="dropdown" style="float:left;">
   <button class="dropbtn">СО</button>
