--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 
+.icon {
+    transition: transform 0.3s ease;
+}
 
+.icon:hover {
+    animation: lift 0.6s ease forwards;
+}
+
+@keyframes lift {
+    0% { transform: translateY(0); }
+    50% { transform: translateY(-4px); } /* Піднімання на 10px */
+    100% { transform: translateY(0); }
+}
 	
 		</style>
 	
