--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1NMTjTFwhiGVrFqtOPJW69i6DkC5qVc-HSkVroXxx5Ho/edit?gid=2063714894#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Жовтень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1NMTjTFwhiGVrFqtOPJW69i6DkC5qVc-HSkVroXxx5Ho/edit?gid=2063714894#gid=2063714894" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Листопад</h2></a>
 
 </div>
 <div class ="block3">
