--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/1AWU0UpWYeidSkgIY8BbAlSD98Q10skC2wA9mPA0ePqI/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1SHzpF2yaCE7kFNcV9Yh3MUpbZgHiyoQ5crs7FVPDjdA/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
@@ -126,7 +126,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1tp4QI1YEimnZy92paQVJy4EU-poYceSEFGC6Be5HVUg/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Грудень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1RPF1UKspfGFhckBmSLX_Z4L5kj1SZj3B4lCSH8DQGe0/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Січень</h2></a>
 
 </div>
 <div class ="block3">
