--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/12d4OHJj2BwGa8ntaG1rCq3laCwG5JfBjxuwDoXcKZL0/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Червень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/12d4OHJj2BwGa8ntaG1rCq3laCwG5JfBjxuwDoXcKZL0/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Липень</h2></a>
 
 </div>
 <div class ="block3">
