--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/1nhV8luahZLSYsIGxwN9bxIwbBQU57AcT-cFza-2mZIA/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1qVm-tg1ftjaq0YbuAa-jCwK5Gvi59B6rb-XxvgUi4mI/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
@@ -128,7 +128,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/12d4OHJj2BwGa8ntaG1rCq3laCwG5JfBjxuwDoXcKZL0/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Липень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/10LZW_M3XJx5ZA8ZPqxqgSzKKnnPN0oyyNkGFgv04C8o/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Серпень</h2></a>
 
 </div>
 <div class ="block3">
