--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </div>
 <div class ="block3">
 
-<a href="https://docs.google.com/spreadsheets/d/1qVm-tg1ftjaq0YbuAa-jCwK5Gvi59B6rb-XxvgUi4mI/edit?gid=138711317#gid=138711317" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/10-PR2MbH12EImgFdsRRxuZNIUStWnN1DzCu1k8hcA9k/edit?gid=1486853304#gid=1486853304" target = "_blank" ><img  src="img/taruf.png" width="270" heaight="220" ><h2>Перевірка заявок</h2></a>
 </div>
 <div class ="block3">
 <a href="https://docs.google.com/document/d/1cNIw9mAeISByRSZwp8YESyn1l3vW3-88/edit?pli=1#heading=h.ch6dx097fvj1" target = "_blank" ><img  src="img/sc.png" width="175" heaight="200" ><h2>Скрипт</h2></a>
@@ -128,7 +128,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/10LZW_M3XJx5ZA8ZPqxqgSzKKnnPN0oyyNkGFgv04C8o/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Серпень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1UcJ-22QlrAh4YAlkAHqvu7Gvn9TKmpFk3QAlsYxNzzA/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Вересень</h2></a>
 
 </div>
 <div class ="block3">
@@ -137,7 +137,7 @@
 </div>
 
 </div>
-
+https://docs.google.com/spreadsheets/d/1V55gGefLjbAAGL14Z2IJx6nzOFHMkq4xgeVY-unw5SY/edit?gid=1356785225#gid=1356785225
 
 <br>
 <br>
