--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="active" href="https://www.google.co.uk/"  target = "_blank">Google</a>
             <a href="https://mail.google.com/chat/u/0/#chat/home" target = "_blank">Chat</a>
             <a href="https://columbus.te.ua/" target = "_blank">Columbus</a>
-            <a href="pause.html">Перерва</a>
+            <a href="https://tarassych17.github.io/Columbusic/">Перерва</a>
         </div>
     </div>
 </div>
