Add link to November schedule in index.html

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 </div>
 <div class ="block3">
-<a href="https://docs.google.com/spreadsheets/d/1kqT2FJg_33MK7OJB_YcPQp3sgGvwxR7OdY_7il6MSa4/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Жовтень</h2></a>
+<a href="https://docs.google.com/spreadsheets/d/1y7fiGUZ6H8_F39sTPn9so_JwrZpZryZrudMNpEiQrrQ/edit?gid=1910128994#gid=1910128994" target = "_blank" ><img  src="img/1.png" width="200" heaight="250" ><h2>Графік Листопад</h2></a>
 
 </div>
 <div class ="block3">
